--- a/src/components/MainSection/CardRoll/CardRollStyle.css
+++ b/src/components/MainSection/CardRoll/CardRollStyle.css
@@ -1,8 +1,34 @@
 .cardRollList{
     display: flex;
     overflow: hidden;
+    scroll-behavior: smooth;
 }
 
 .cardHeading p {
     font-size: 20px;
+}
+
+.back-forward-btn{
+    display: flex;
+    justify-content: space-between;
+    margin-right: -24px;
+    margin-left: -24px;
+}
+
+.previous-btn{
+    border: none;
+    position: absolute;
+    left: 2%;
+    margin-top: 65px;
+    border-radius: 5px;
+
+}
+
+.next-btn{
+    border: none;
+    position: absolute;
+    right: 2%;
+    margin-top: 65px;
+    border-radius: 5px;
+
 }
