--- a/src/components/MainSection/CardRoll/CardRollStyle.css
+++ b/src/components/MainSection/CardRoll/CardRollStyle.css
@@ -2,7 +2,13 @@
     display: flex;
     overflow: hidden;
     scroll-behavior: smooth;
+    overflow-x: scroll;
 }
+
+.cardRollList::-webkit-scrollbar {
+    overflow: scroll;
+    scrollbar-width: thin;
+  }
 
 .cardHeading p {
     font-size: 20px;
